# gnome-backgrounds

./: .COPYING.swp  .cvsignore  .gitlab-ci.yml  AUTHORS  COPYING  COPYING_CCBY2  COPYING_CCBYSA2  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.in  gnome-backgrounds.doap  meson.build  title.blend
abstract/: Makefile.am  gnome-abstract.xml.in.in
backgrounds/: Makefile.am  adwaita-d.jxl  adwaita-l.jxl  adwaita-timed.xml.in  adwaita.xml.in  adwaita.xml.in.in  amber-d.jxl  amber-l.jxl  amber.xml.in  balls-d.jxl  balls-l.jxl  balls.xml.in  blendpills-d.jxl  blendpills-l.jxl  blendpills.xml.in  blobs.xml.in  brush-strokes.xml.in  candy-reborn-d.jxl  candy-reborn-l.jxl  candy-reborn.xml.in  curvy-d.jxl  curvy-l.jxl  curvy.xml.in  design-is-rounded-rectangles-d.jxl  design-is-rounded-rectangles-l.jxl  design-is-rounded-rectangles.xml.in  disco.xml.in  dithered-sun-d.jxl  dithered-sun-l.jxl  dithered-sun.xml.in  drool.xml.in  dune.xml.in  field.xml.in  fold-d.jxl  fold-l.jxl  fold.xml.in  geometrics-d.jxl  geometrics-l.jxl  geometrics.xml.in  geometrics2-d.jxl  (+105 more)
branded/: Makefile.am  gnome-branded.xml.in.in
cosmos/: Makefile.am  background-1.xml.in  gnome-cosmos.xml.in.in
its/: wallpaper.its  wallpaper.loc
nature/: Makefile.am  gnome-nature.xml.in.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  gnome-backgrounds.pot  (+66 more)
tiles/: Makefile.am  gnome-tiles.xml.in.in
translucent/: Makefile.am  gnome-translucent.xml.in.in
