SUBDIRS = branded tiles translucent po

EXTRA_DIST = intltool-extract.in intltool-merge.in intltool-update.in

MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	config.h.in \
	configure \
	depcomp \
	install-sh \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	missing \
	mkinstalldirs

