dataconf = configuration_data()
dataconf.set('BACKGROUNDDIR', backgrounddir)
dataconf.set('datadir', datadir)

backgrounds = [
  'adwaita-d.jxl',
  'adwaita-l.jxl',
  'amber-d.jxl',
  'amber-l.jxl',
  'balls-d.jxl',
  'balls-l.jxl',
  'blobs-d.svg',
  'blobs-l.svg',
  'blendpills-d.jxl',
  'blendpills-l.jxl',  
  'curvy-d.jxl',
  'curvy-l.jxl',
  'dithered-sun-d.jxl',
  'dithered-sun-l.jxl',
  'drool-d.svg',
  'drool-l.svg',
  'fold-d.jxl',
  'fold-l.jxl',
  'glass-chip-d.jxl',
  'glass-chip-l.jxl',
  'lcd-rainbow-d.jxl',
  'lcd-rainbow-l.jxl',
  'map-d.svg',
  'map-l.svg',
  'morphogenesis-d.svg',
  'morphogenesis-l.svg',
  'pills-d.jxl',
  'pills-l.jxl',
  'pixel-pusher-d.jxl',
  'pixel-pusher-l.jxl',
  'pixels-d.jxl',
  'pixels-l.jxl',
  'progress-d.jxl',
  'progress-l.jxl',
  'sheet-d.jxl',
  'sheet-l.jxl',
  'symbolic-d.png',
  'symbolic-l.png',
  'tarka-d.jxl',
  'tarka-l.jxl',
  'tarkov-pills-d.jxl',
  'tarkov-pills-l.jxl',
  'tubes-d.jxl',
  'tubes-l.jxl',
  'vnc-d.png',
  'vnc-l.png'
]

install_data(backgrounds, install_dir: backgrounddir)

foreach metadata : [
  'adwaita.xml',
  'amber.xml',
  'balls.xml',
  'blobs.xml',
  'blendpills.xml',
  'curvy.xml',
  'dithered-sun.xml',
  'drool.xml',
  'fold.xml',
  'glass-chip.xml',
  'lcd-rainbow.xml',
  'map.xml',
  'morphogenesis.xml',
  'pills.xml',
  'pixel-pusher.xml',
  'pixels.xml',
  'progress.xml',
  'sheet.xml',
  'symbolic.xml',
  'tarka.xml',
  'tarkov-pills.xml',
  'tubes.xml',
  'vnc.xml']
  configure_file(
    input: metadata + '.in',
    output: metadata,
    configuration: dataconf,
    install: true,
    install_dir: metadatadir
  )
endforeach
